# football-analystv2

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_INTRODUCTION.md  PROJECT_IRON_RULES.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  analyze_jleague_0606.py  apply_decision_iteration.py  final_merge_report.py  fix_missing_data.py  full_analysis_v2.py  new_main.py  parse_500_html.py  parse_deep_pages.py  parse_deep_pages_v2.py  parse_everything.py  pyproject.toml  render_jleague_report.py  report_template_jingcai_multi_match.md  report_template_jingcai_qimen.md  report_template_standard.md  requirements.txt  review_cli.py  scripts_generate_worldcup_24_report.py  skill.json  train_worldcup_model.py  worldcup_predictor.py
.github/: dependabot.yml
core/: __init__.py  bayesian_fusion.py  calibration_rules.py  context_models.py  data_collector.py  decision_engine.py  decision_iteration.py  jingcai_500_collector.py  leg_model.py  llm_analyzer.py  market_dewater.py  market_signal_model.py  match_intelligence.py  math_models.py  model_consistency.py  model_optimizer.py  multi_source_fusion.py  odds_history.py  odds_movement_analyzer.py  parlay_risk.py  post_match_review.py  probability_fusion.py  qimen_assistant.py  report_renderer.py  risk_manager.py  source_registry.py  supplemental_data.py  weather_context.py  workflow_coordinator.py  workflow_new.py  worldcup_predictor.py  worldcup_trained_model.py  xg_proxy_model.py
data/: README.md
docs/: ODDS_MOVEMENT_OPTIMIZATION_PLAN.md
scripts/: analyze_finland_0623_strict.py  (+94 more)
web/: .env.example  (+6 more)
(+114 files in other folders)
