[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analyst-skill"
version = "5.3.0"
description = "Auditable pre-match football probability analysis for Chinese sports lottery research."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "football-analyst-skill contributors" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pandas>=2.0.0",
  "pypdf>=4.0.0",
  "requests>=2.28.0",
  "xlrd==2.0.1",
]

[project.scripts]
football-analyst = "new_main:main"
football-review = "review_cli:main"
football-worldcup = "worldcup_predictor:main"
football-train-worldcup = "train_worldcup_model:main"

[tool.setuptools]
py-modules = ["new_main", "review_cli", "worldcup_predictor", "train_worldcup_model"]

[tool.setuptools.packages.find]
include = ["core*"]

